
# Note: This crate must be built using do.sh

[package]
name = "spl-packet"
version = "0.1.0"
description = "Basic packet sending protocol"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
program = ["solana-sdk/program"]
default = ["solana-sdk/default"]

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
solana-sdk = { version = "1.3.17", default-features = false, optional = true }
thiserror = "1.0"
num_enum = "0.5.1"

[lib]
crate-type = ["cdylib", "lib"]
